# SCVP.artifacts

./: CMakeLists.txt
clock_generator/: main.cpp
cpp_playground/: CMakeLists.txt  testing.cpp
datatypes/: main.cpp
exercise2/: exor.h  exor_main.cpp  mon.h  nand.h
exercise3/: main.cpp  state_machine.cpp  state_machine.h
exercise4/: main.cpp  place.h  subnet.h  transition.h
exercise5/: kpn.cpp  kpn.h
not_chain/: main.cpp
portarrays/: CMakeLists.txt
